added rating record after saving issue

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
-  raitings_title: Raitings
+  ratings_title: Ratings
   label_currencies: Currencies
   label_languages: Languages
+  rating: Rating
